removed the error logger, the sdcard writing permission and fixed some warnings.